# cargo-autoinherit

./: Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: general.yml  release.yml  security.yml
src/: cli.rs  dedup.rs  lib.rs  main.rs
tests/: main.rs
tests/new-child-dep/: Cargo.toml
tests/snapshots/: main__default_behavior@cli__Cargo.toml.snap  main__default_behavior@db__Cargo.toml.snap  main__prefer_simple_dotted@Cargo.toml.snap  main__prefer_simple_dotted@cli__Cargo.toml.snap  main__prefer_simple_dotted@config__Cargo.toml.snap  main__prefer_simple_dotted@db__Cargo.toml.snap  main__prefer_simple_dotted@macros__Cargo.toml.snap  main__prefer_simple_dotted@web__Cargo.toml.snap  main__with_excluded_member@Cargo.toml.snap  main__with_excluded_member@cli__Cargo.toml.snap  main__with_excluded_member@config__Cargo.toml.snap  main__with_excluded_member@macros__Cargo.toml.snap
tests/uninherited-existing-child-dep/: Cargo.toml
tests/uninherited-existing-child-dep/child/: Cargo.toml
